AP-505: Fixed expand / collapse issue in Login IP Filters page

--- a/src/Modules/Settings/Dnn.PersonaBar.Security/Security.Web/src/components/ipFilters/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Security/Security.Web/src/components/ipFilters/style.less
@@ -12,7 +12,6 @@
         width: 100%;
     }
     .header-row {
-        border-bottom: 1px solid @alto;
         padding: 10px 0 10px 0;
         width: 100%;
         float: left;
